# arqanore-sockets

./: .gitignore  CMakeLists.txt  app  build.sh
include/arqanore/: arqmessage.cpp  arqmessage.h  arqsocket.h
src/: app.cpp  arqmessage.cpp  arqsocket.cpp
